--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "test-coverage": "ng test --code-coverage",
     "json-server": "json-server --watch db.json"
   },
   "private": true,
