--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~11.2.3",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "json-server": "^0.16.3",
     "ngx-spinner": "^11.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
